--- a/configuration/environment/notebook_environment.yaml
+++ b/configuration/environment/notebook_environment.yaml
@@ -1,9 +1,9 @@
 data:
-  externals: ../data/externals
-  raw: ../data/raw
-  processed: ../data/processed
-  final: ../data/final
-  results: ../results
+  externals: data/externals
+  raw: data/raw
+  processed: data/processed
+  final: data/final
+  results: results
 
 
 reload: true
