--- a/configuration/main.yaml
+++ b/configuration/main.yaml
@@ -11,6 +11,7 @@ feature_score: false
 surveys: []
 survey_version: null
 password: null
+limit_unit: null
 
 automatic_contamination: false
 features:
