--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-hydra-core>=1.3.2
-numpy>=1.24.4
-pandas>=2.0.3
-openpyxl>=3.1.2
-scikit-learn>=1.3.0
-scipy>=1.10.1
-seaborn>=0.12.2
-pyod>=1.1.0
-pythresh>=0.3.3
+hydra-core<=1.3.2
+numpy<=1.26.4
+pandas<=2.2.2
+openpyxl<=3.1.2
+scikit-learn<=1.4.2
+scipy<=1.13.0
+seaborn<=0.13.2
+pyod<=1.1.3
+pythresh<=0.3.6
+s3fs<=2024.3.1
+pyarrow<=15.0.2
 
 
